catkin_ws/logs/backend/build.make.052.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:457:5: error: expected ‘,’ or ‘;’ before ‘int’
     int* temp_ids = nullptr; 
     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:492:6: error: ‘temp_ids’ was not declared in this scope
      temp_ids = ids; 
      ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
